<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_web"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/web_view" />
    <item
        android:id="@+id/nav_chatbot"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/chatbot" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />
</menu>